policies/components/other/require-pod-probes-unique/require-pod-probes-unique.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ibm-require-pod-probes-unique
  annotations:
    # We don't need to autogenerate controllers, we are enforcing the rule on Deployment,
    # Daemonset, and Statefulset directly. Pods belonging to CronJobs & Jobs do not need probes.
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Require Unique Pod Probes
    policies.kyverno.io/category: IBM - Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Liveness and readiness probes accomplish different goals, and setting both to the same
      is an anti-pattern and often results in app problems in the future. This policy
      checks that liveness and readiness probes are not equal.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: validate-probes-are-unique
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - DaemonSet
                - StatefulSet
              namespaceSelector:
                matchExpressions:
                  - key: ibm.com/kyverno
                    operator: In
                    values:
                    - audit
      validate:
        message: "Liveness and readiness probes cannot be the same."
        deny:
          conditions:
            any:
              - key: "{{ request.object.spec.template.spec.containers[?readinessProbe==livenessProbe] | length(@) }}"
                operator: GreaterThan
                value: "0"
